fixed last fm and discovery service